--- a/charts/frigate/values.yaml
+++ b/charts/frigate/values.yaml
@@ -10,7 +10,7 @@ strategyType: Recreate
 image:
   repository: ghcr.io/blakeblackshear
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.12.0-beta8"
+  tag: "v0.12.0-beta8"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
