--- a/charts/frigate/values.yaml
+++ b/charts/frigate/values.yaml
@@ -8,9 +8,9 @@ replicaCount: 1
 strategyType: Recreate
 
 image:
-  repository: ghcr.io/blakeblackshear
+  repository: "ghcr.io/blakeblackshear/frigate"
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.12.0-beta8"
+  tag: "0.12.0-beta8"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
